fix(app): global fixes before showdown
