# app/controllers/auth.controller.go
@@ -13,9 +13,9 @@ func AuthController(a *fiber.App) {
 	route.Get("/google/register", handlers.AuthGoogleGetApprove)
 	route.Get("/google/callback", handlers.Callback)
 	route.Get("/google/login", handlers.AuthGoogleGetApprove) //TODO!: Separate login from register. Now when register we login
-	route.Post("/token_update", handlers.UpdateTokensHandler)
+	route.Post("/tokenUpdate", handlers.UpdateTokensHandler)
 	route.Post("/register", handlers.RegisterHandler)
 	route.Post("/login", handlers.LoginHandler)
-	route.Post("/admin_register", middleware.AuthAdmin, handlers.AdminRegisterHandler)
-	route.Post("/admin_login", handlers.AdminLoginHandler)
+	route.Post("/admin/register", middleware.AuthAdmin, handlers.AdminRegisterHandler)
+	route.Post("/admin/login", handlers.AdminLoginHandler)
 }
