# docs/swagger.json
@@ -12,61 +12,6 @@
     "host": "pay-with-crypto.xyz",
     "basePath": "/",
     "paths": {
-        "/admin/createTag": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Create new tag for cards",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin"
-                ],
-                "parameters": [
-                    {
-                        "description": "Tag data",
-                        "name": "tag_data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "name": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/datastore.Tag"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request body",
-                        "schema": {
-                            "$ref": "#/definitions/utility.Message"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/utility.Message"
-                        }
-                    }
-                }
-            }
-        },
         "/admin/getForApprove": {
             "get": {
                 "security": [
@@ -216,7 +161,7 @@
                 }
             }
         },
-        "/auth/admin_login": {
+        "/auth/admin/login": {
             "post": {
                 "description": "Login to admin account",
                 "consumes": [
@@ -275,7 +220,7 @@
                 }
             }
         },
-        "/auth/admin_register": {
+        "/auth/admin/register": {
             "post": {
                 "security": [
                     {
@@ -469,7 +414,7 @@
                 }
             }
         },
-        "/auth/token_update": {
+        "/auth/tokenUpdate": {
             "post": {
                 "description": "Update tokens.",
                 "consumes": [
@@ -518,6 +463,39 @@
                     },
                     "500": {
                         "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utility.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/card/": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get cards for main page",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Card"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Card successful edited",
+                        "schema": {
+                            "$ref": "#/definitions/utility.Message"
+                        }
+                    },
+                    "404": {
+                        "description": "No cards",
                         "schema": {
                             "$ref": "#/definitions/utility.Message"
                         }
@@ -1081,6 +1059,9 @@
                 "name": {
                     "type": "string"
                 },
+                "password": {
+                    "type": "string"
+                },
                 "updatedAt": {
                     "description": "add ``",
                     "type": "string"
@@ -1140,6 +1121,12 @@
                         "$ref": "#/definitions/datastore.Card"
                     }
                 },
+                "created_tags": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/datastore.Tag"
+                    }
+                },
                 "deletedAt": {
                     "type": "string"
                 },
@@ -1166,7 +1153,10 @@
         "datastore.Tag": {
             "type": "object",
             "properties": {
-                "admin_id": {
+                "approved": {
+                    "type": "string"
+                },
+                "creator_id": {
                     "type": "string"
                 },
                 "id": {
